start working on swagger
